--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
