--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graphql-books",
   "version": "1.0.0",
   "description": "",
-  "main": "schema.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
