--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "require-directory": "^2.1.1",
+    "sequelize": "^4.38.0",
+    "sqlite3": "^4.0.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
