--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nodemon": "^1.18.3"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC"
